[package]
name = "nexy"
version = "0.5.2"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Multi-network server for the Nex protocol"
keywords = ["nex", "protocol", "tcp", "socket", "server"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/nexy"

[dependencies]
anyhow = "1.0"
chrono = "^0.4.20"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
urlencoding = "2.1"
