[package]
name = "nexy"
version = "0.6.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Multi-network server for the Nex protocol"
keywords = ["nex", "protocol", "tcp", "socket", "server"]
categories = ["network-programming"]
repository = "https://github.com/YGGverse/nexy"

[dependencies]
anyhow = "1.0.102"
chrono = "^0.4.20"
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
regex = "1.12.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
